Wildlife_corridor_analysis/GpMessages/103588742302000
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: mardi, 29 avril 2025 15:54:57</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    if objektart == 'highway':
    ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at mardi, 29 avril 2025 15:54:58 (Elapsed Time: 0,30 seconds)</msg></messages>